src/test/run-pass/break-value.rs
fn int_id(x: int) -> int { ret x; }

fn main() { loop { int_id(break); } }
